# TheFinalsTAEventScrape

./: database.py  main.py
data_processor/: Cargo.toml
data_processor/src/: database.rs  main.rs
