[package]
name = "data_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
